General documentation update and expansion

--- a/doc/styles/docpage.css
+++ b/doc/styles/docpage.css
@@ -1,7 +1,12 @@
 
 /* Basic CSS for Lumen documentation */
 
+code
+{
+    font-weight : bold;
+}
+
 .centered
 {
-    text-align: center;
+    text-align : center;
 }
